# twelve_labs_sa

./: .gitattributes  .gitignore  CLI_REORGANIZATION_PLAN.md  FIXES_SUMMARY.md  Makefile  README.md  SIMULATION_MODE_GUIDE.md  SIMULATION_REMOVAL_SUMMARY.md  SOLUTION_SUMMARY.md  SUMMARY.md  assets_list.json  build.py  build_executable.py  build_with_uv.py  demo_test_eval.py  example_usage.py  populate_demo_store.py  pyproject.toml  system_design_diagram.md  test_labels.json  test_labels_improved.json  test_lancedb_integration.py  test_search_index.json  test_spec_compliance.py  test_vector_store.py
.test_lancedb_store/: assets.json  metadata.json  vectors.pkl
.vector_store/: assets.json  labels.json  vectors.pkl
batch_output/: 12c190f5_results.json  14d1eff7_results.json  173ee252_results.json  1d81acab_results.json  2cc23a3d_results.json  33baf36f_results.json  365ad0d1_results.json  398074cb_results.json  3d754a44_results.json  41c472a8_results.json  59629dc7_results.json  596caa9f_results.json  7bb4a41b_results.json  8db00878_results.json  91f7a9d3_results.json  959433c7_results.json  a0a6e2fe_results.json  b4c204d9_results.json  batch_summary.json  da7aaab8_results.json  e681276c_results.json  f448b002_results.json  fcb3096e_results.json  ff58f992_results.json
demo_output/: 01_metadata.json  01_video_metadata.json  02a_embedding.json  02c_generate.json  03a_labels.json  03b_metadata.json  05_search_index.json
demo_vector_store_data/: animation_1032209408-preview_433e0808_embedding.json  animation_1032209408-preview_433e0808_generate.json  (+164 more)
examples/: README.md  (+1 more)
(+51 files in other folders)
